force-app/main/default/objects/Work_Order__c/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <inlineHelpText>What are the coordinates of the work location?</inlineHelpText>
    <label>Coordinates</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>