force-app/main/default/objects/Work_Order__c/fields/Herd__c.field-meta.xml
<CustomField>
    <fullName>Herd__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Herd</label>
    <referenceTo>Herd__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>