force-app/main/default/objects/Work_Order__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>On which range does the work need to be done?</inlineHelpText>
    <label>Range</label>
    <referenceTo>Range__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>