force-app/main/default/objects/Work_Order__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>