force-app/main/default/objects/Work_Order__c/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <description>Facility Repairs</description>
    <label>Facility</label>
</RecordType>