force-app/main/default/objects/Work_Order__c/recordTypes/Veterinarian.recordType-meta.xml
<RecordType>
    <fullName>Veterinarian</fullName>
    <active>true</active>
    <description>Veterinariany Services</description>
    <label>Veterinarian</label>
</RecordType>