force-app/main/default/objects/Work_Order__c/listViews/New_Work_Orders.listView-meta.xml
<ListView>
    <fullName>New_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Short_Description__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Work Orders</label>
</ListView>